--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "react-router-hash-link": "^2.4.3",
     "react-scripts": "4.0.3",
     "react-scroll": "^1.8.4",
+    "typewriting-react": "^1.0.8",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
