--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,8 @@
     "react-router-hash-link": "^2.4.3",
     "react-scripts": "4.0.3",
     "react-scroll": "^1.8.4",
+    "react-tsparticles": "^1.37.4",
+    "react-typed": "^1.2.0",
     "typewriting-react": "^1.0.8",
     "web-vitals": "^1.1.2"
   },
